--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
     "flowbite-react": "^0.11.7",
+    "framer-motion": "^12.16.0",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
