--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
