--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "tailwindcss-no-scrollbar": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
