--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.16.0",
+    "keen-slider": "^6.8.6",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
